--- a/src/app/articles/articles.component.css
+++ b/src/app/articles/articles.component.css
@@ -48,7 +48,7 @@ body {
   font-family: inherit;
 }
 
-.dropdown-content {
+.dropdown-contents {
   display: none;
   position: absolute;
   background-color: #2B3130;
